--- a/Section-10_(Responsive)/index.html
+++ b/Section-10_(Responsive)/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
 </head>
-
+<!--Just for testing perpose-->
 <body>
     <div class="backdrop"></div>
     <div class="modal">
